src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dhF500-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault window height: F500\nborder on\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 608 × 500, bounds: 1240 × 680, states: []

post-map configures:
size: 608 × 500, bounds: 1240 × 680, states: [Activated]
