src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dhF500-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault window height: F500\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 616 × 500, bounds: 1248 × 688, states: []

post-map configures:
size: 616 × 500, bounds: 1248 × 688, states: []
size: 616 × 500, bounds: 1248 × 688, states: [Activated]
